2860 Fix errorProne build for some devs